# pharma-data-hub-france

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
analysis/notebooks/: 01_bdpm_drug_database copy.ipynb  01_bdpm_drug_database.ipynb  02_rpps_hcp_registry.ipynb  03_open_medic.ipynb  03_open_medic_prescriptions.ipynb  04_finess_establishments.ipynb  05_insee_cog_geography.ipynb  06_transparence_sante_payments.ipynb  mg_liberaux_map.html
docs/: article_bdpm.md  article_open_medic.md  article_rpps.md  article_rpps_annuaire.md  data_dictionary.md
etl/: config.py  download.py  utils.py
sql/: schema.sql
tests/: test_download.py  test_schema.py
